# mock-data

./: .coveragerc  output.json  pyproject.toml  requirements.txt  scripts.py
.devcontainer/: devcontainer.json
codespaces_python_poetry/: claim_mock.json  main.py
files/: claim_mock.csv  claim_mock.json
src/mock_data/: function.py  main.py  main_2.py
tests/: test_function.py
